kubernetes/overlays/apps/infra/applications/outline/network-policies/allow-dragonfly.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dragonfly
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/part-of: dragonfly
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app: dragonfly-operator
